Refactored code for 26.1.2.