@@ -1,5 +1,5 @@
 plugins {
-  id 'net.neoforged.moddev' version '2.0.126'
+  id 'net.neoforged.moddev' version '2.0.141'
 }
 
 base {
@@ -16,12 +16,13 @@ neoForge {
 dependencies {
   compileOnly group: 'org.spongepowered', name: 'mixin', version: '0.8.7'
   testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
-  testImplementation 'org.mockito:mockito-core:5.11.0'
+  testImplementation 'org.mockito:mockito-core:5.18.0'
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 test {
   useJUnitPlatform()
+  jvmArgs '-XX:+EnableDynamicAgentLoading', '-Djdk.attach.allowAttachSelf=true'
 }
 
 processResources {
